[sdist]
formats = gztar

[check-manifest]
ignore =
    *.yml
    *.yaml
    .coveragerc
    docs
    docs/*
    *.enc
    notebooks
    notebooks/*
    tests
    tests/*

[flake8]
max-line-length = 105
select = C,E,F,W,B,B950
ignore = E203, E501, W503
exclude = lkf_tools/_version.py


[metadata]
name = lkf_tools
description = this package allows to detect and track deformation features (LKFs) in sea-ice deformation data
author = Nils Hutter
url = https://github.com/nhutter/lkf_tools
long_description = file: README.md
long_description_content_type = text/markdown
license = GNU General Public License v3.0
license_file = LICENSE.txt

## These need to be filled in by the author!
# For details see: https://pypi.org/classifiers/

classifiers =
    Development Status :: 3 - Alpha #5 - Production/Stable 
    Topic :: Scientific/Engineering
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    # Dont change this one
    License :: OSI Approved :: MIT License 

## Add your email here
author_email = nils.hutter@awi.de


### make sure to fill in your dependencies!
[options]
install_requires =
    numpy
    requests
    numpy 
    matplotlib
    scipy
    netCDF4
    datetime
    scikit-image
    pyproj
    cartopy
setup_requires= 
    setuptools_scm
python_requires = >=3.6
################ Up until here

zip_safe = False
packages = find:
